# dronerobotroute

./: README.md  build.gradle.kts  settings.gradle.kts
.fleet/: receipt.json
Img1/: 4_Result_Edges.txt  5_Route.txt  README.md
Img1Exg/: 4_Result_Edges.txt  5_Route.txt  README.md
Img2/: 4_Result_Edges.txt  5_Route.txt  README.md
Img2Exg/: 4_Result_Edges.txt  README.md
composeApp/: build.gradle.kts
composeApp/src/desktopMain/kotlin/org/askolds/cmptest/: App.kt  Greeting.kt  ImageAction.kt  MainScreen.kt  MainScreenEvent.kt  MainScreenState.kt  MainScreenViewModel.kt  Platform.kt  Stuff.kt  main.kt
composeApp/src/desktopMain/kotlin/org/askolds/cmptest/composables/: ColorIndex.kt  Otsu.kt
composeApp/src/desktopMain/kotlin/org/askolds/cmptest/opencv/: LibraryLoader.kt  OpenCVStuff.kt
cppStuff/: build.gradle.kts
cppStuff/src/main/cpp/: .gitignore  CMakeLists.txt
cppStuff/src/main/cpp/jni/: org_askolds_cmptest_opencv_OpenCVStuff.h
cppStuff/src/main/cpp/opencv/: ColorIndex.cpp  Otsu.cpp  Strip.cpp
cppStuff/src/main/cpp/opencv/headers/: ColorIndex.h  Otsu.h  Strip.h
cppStuff/src/main/cpp/tests/: test_All.cpp  test_ColorIndex.cpp  test_Otsu.cpp  test_Strip.cpp
gradle/: libs.versions.toml
python/: edges.csv  solve.py
python/cstuff/: .gitignore  CMakeLists.txt  ShowRoute.cpp
